--- a/package.yaml
+++ b/package.yaml
@@ -10,8 +10,11 @@ extra-source-files:
 - CHANGELOG.md
 - LICENSE
 - README.md
+- input/day*.txt
 dependencies:
 - base >= 4.12
+- trifecta
+- vector
 ghc-options:
 - -Wall
 - -Werror
