--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 /default.nix linguist-generated
 /nix/sources.json linguist-generated
 /nix/sources.nix linguist-generated
-/src/tex/allcode.tex linguist-generated
+/_src/tex/allcode.tex linguist-generated
