--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,8 @@ library:
   - Data.AOC19.Day05
   - Data.AOC19.Day06
   - Data.AOC19.Day07
+  - Data.AOC19.Day08
+  - Data.AOC19.Day09
   dependencies:
   - conduit
   - data-ordlist
@@ -45,3 +47,15 @@ library:
 #   main: Main.hs
 #   dependencies:
 #   - aoc
+tests:
+  aoc-test:
+    main: Main.hs
+    source-dirs: test
+    dependencies:
+    - aoc
+    - conduit
+    - digits
+    - tasty
+    - tasty-discover
+    - tasty-hunit
+    - vector
