[2015.11] Add Haskell solution

--- a/package.yaml
+++ b/package.yaml
@@ -76,6 +76,10 @@ executables:
     <<: *executable
     main: AdventOfCode.Year2015.Day10
     other-modules: []
+  aoc-2015-day11:
+    <<: *executable
+    main: AdventOfCode.Year2015.Day11
+    other-modules: []
   aoc-2016-day05:
     <<: *executable
     main: AdventOfCode.Year2016.Day05
