--- a/package.yaml
+++ b/package.yaml
@@ -188,6 +188,9 @@ executables:
     dependencies:
     - comonad
     - mtl
+  aoc-2020-day10:
+    <<: *executable
+    main: AdventOfCode.Year2020.Day10
 _benchmark: &benchmark
   ghc-options:
   - -threaded
