--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
   - id: nixpkgs-fmt
     name: Format .nix files
   repo: git://github.com/nix-community/nixpkgs-fmt
-  rev: v1.0.0
+  rev: v1.2.0
 - hooks:
   - args: ["--format=tty", "--shell=bash"]
     files: ^.envrc$
@@ -26,10 +26,21 @@ repos:
   repo: git://github.com/detailyang/pre-commit-shell
   rev: v1.0.6
 - hooks:
+  - description: Use Biber to format .bib files
+    entry: format-biber
+    files: '.+\.bib$'
+    id: biber-format
+    language: system
+    name: Format .bib files
   - description: Prettify Haskell code with ormolu
     entry: "ormolu --mode inplace"
     files: '.+\.hs$'
     id: ormolu
     language: system
     name: Prettify Haskell code
+  - entry: hlint
+    files: '.+\.hs$'
+    id: hlint
+    language: system
+    name: Lint Haskell code
   repo: local
