[2019.10] containers -> unordered-containers

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ dependencies:
 - split
 - template-haskell
 - trifecta
+- unordered-containers
 default-extensions:
 - TemplateHaskell
 ghc-options:
