[2015.19] Add Haskell solution

--- a/package.yaml
+++ b/package.yaml
@@ -128,6 +128,9 @@ executables:
     main: AdventOfCode.Year2015.Day18
     dependencies:
     - linear
+  aoc-2015-day19:
+    <<: *executable
+    main: AdventOfCode.Year2015.Day19
   aoc-2016-day05:
     <<: *executable
     main: AdventOfCode.Year2016.Day05
