--- a/package.yaml
+++ b/package.yaml
@@ -158,6 +158,9 @@ executables:
   aoc-2017-day02:
     <<: *executable
     main: AdventOfCode.Year2017.Day02
+  aoc-2017-day03:
+    <<: *executable
+    main: AdventOfCode.Year2017.Day03
   aoc-2018-day01:
     <<: *executable
     main: AdventOfCode.Year2018.Day01
