[2021.02] Use the semi-direct product of a monoid
https://github.com/mstksg/advent-of-code-2021/blob/master/reflections-out/day02.md

--- a/package.yaml
+++ b/package.yaml
@@ -52,6 +52,7 @@ library:
   - groups
   - lens
   - linear
+  - monoid-extras
   - mtl
   - parser-combinators
   - recursion-schemes
@@ -348,6 +349,7 @@ executables:
     main: AdventOfCode.Year2021.Day02
     dependencies:
     - linear
+    - monoid-extras
   aoc-2021-day03:
     <<: *executable
     main: AdventOfCode.Year2021.Day03
