--- a/package.yaml
+++ b/package.yaml
@@ -162,6 +162,8 @@ executables:
   aoc-2017-day03:
     <<: *executable
     main: AdventOfCode.Year2017.Day03
+    dependencies:
+    - linear
   aoc-2017-day04:
     <<: *executable
     main: AdventOfCode.Year2017.Day04
