--- a/package.yaml
+++ b/package.yaml
@@ -355,6 +355,9 @@ executables:
   aoc-2021-day03:
     <<: *executable
     main: AdventOfCode.Year2021.Day03
+  aoc-2021-day04:
+    <<: *executable
+    main: AdventOfCode.Year2021.Day04
 _benchmark: &benchmark
   ghc-options:
   - -threaded
