--- a/package.yaml
+++ b/package.yaml
@@ -56,6 +56,7 @@ library:
   - mtl
   - parser-combinators
   - recursion-schemes
+  - safe
   - scientific
   - transformers
   - utility-ht
@@ -360,6 +361,7 @@ executables:
     main: AdventOfCode.Year2021.Day04
     dependencies:
     - recursion-schemes
+    - safe
 _benchmark: &benchmark
   ghc-options:
   - -threaded
