[2021.07] Add Haskell solution to Part One

--- a/package.yaml
+++ b/package.yaml
@@ -376,6 +376,9 @@ executables:
     - linear
     - vector
     - vector-sized
+  aoc-2021-day07:
+    <<: *executable
+    main: AdventOfCode.Year2021.Day07
 _benchmark: &benchmark
   ghc-options:
   - -threaded
