--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,8 @@ insert_final_newline = true
 [*.json]
 indent_size = 4
 
+[Makefile]
+indent_style = tab
+
 [{VERSION,input/day*.txt}]
 insert_final_newline = false
