--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Install Nix
-      uses: cachix/install-nix-action@v14
+      uses: cachix/install-nix-action@v18
       with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210823_af94b54/install
         extra_nix_config: |
-          experimental-features = nix-command flakes
-    - uses: cachix/cachix-action@v10
+          access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+    - uses: cachix/cachix-action@v12
       with:
         name: yurrriq
         skipPush: true
