--- a/package.yaml
+++ b/package.yaml
@@ -35,7 +35,7 @@ library:
   - -fwarn-incomplete-patterns
   source-dirs: src
   dependencies:
-  - aeson >= 1.5 && < 1.6
+  - aeson
   - arithmoi
   - combinat
   - comonad
