[2022.02] Add Haskell solution to Part One

--- a/package.yaml
+++ b/package.yaml
@@ -400,6 +400,9 @@ executables:
   aoc-2022-day01:
     <<: *executable
     main: AdventOfCode.Year2022.Day01
+  aoc-2022-day02:
+    <<: *executable
+    main: AdventOfCode.Year2022.Day02
 _benchmark: &benchmark
   ghc-options:
   - -threaded
