[2022.02] Reimplement using modular arithmetic

--- a/package.yaml
+++ b/package.yaml
@@ -403,6 +403,8 @@ executables:
   aoc-2022-day02:
     <<: *executable
     main: AdventOfCode.Year2022.Day02
+    dependencies:
+    - finite-typelits
 _benchmark: &benchmark
   ghc-options:
   - -threaded
