--- a/package.yaml
+++ b/package.yaml
@@ -405,6 +405,9 @@ executables:
     main: AdventOfCode.Year2022.Day02
     dependencies:
     - finite-typelits
+  aoc-2022-day03:
+    <<: *executable
+    main: AdventOfCode.Year2022.Day03
 _benchmark: &benchmark
   ghc-options:
   - -threaded
