--- a/.envrc
+++ b/.envrc
@@ -2,5 +2,6 @@ watch_file \
     emacs.el \
     flake.lock \
     flake.nix \
+    nix/*.nix \
     package.yaml
 eval "$(nix print-dev-env --max-jobs "$(nproc --all | awk '{ $1 /= 2; print $1 - ($1 % 1) }')" --profile "$(direnv_layout_dir)/flake-profile")"
