[2022.01] Add messy OCaml example

--- a/advent_of_code/dune-project
+++ b/advent_of_code/dune-project
@@ -19,7 +19,7 @@
  (name advent_of_code)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune)
+ (depends ocaml dune base angstrom stdio)
  (tags
   (topics "to describe" your project)))
 
