--- a/advent_of_code/advent_of_code.opam
+++ b/advent_of_code/advent_of_code.opam
@@ -12,6 +12,9 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.6"}
+  "base"
+  "angstrom"
+  "stdio"
   "odoc" {with-doc}
 ]
 build: [
